--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -576,7 +576,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 0.01 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.01 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -586,9 +586,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")\n"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")\n"
    ]
   },
   {
@@ -686,7 +686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 0.01 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.01 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -696,9 +696,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")\n"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")\n"
    ]
   },
   {
@@ -1004,7 +1004,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC = [-0.147, 0.173]\n"
+      "IC = [-0.133, 0.173]\n"
      ]
     }
    ],
@@ -1159,7 +1159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 0.87 ≥ α = 0.05 → Não rejeitamos H0\n"
+      "p-valor = 0.87 > α = 0.05 → Não rejeitamos H0\n"
      ]
     }
    ],
@@ -1169,9 +1169,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -1279,7 +1279,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>B</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1294,12 +1294,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>B</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>B</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1314,7 +1314,7 @@
        "    <tr>\n",
        "      <th>146</th>\n",
        "      <td>D</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>147</th>\n",
@@ -1338,14 +1338,14 @@
       ],
       "text/plain": [
        "     X  Y\n",
-       "0    B  0\n",
+       "0    B  1\n",
        "1    B  1\n",
        "2    B  1\n",
-       "3    B  1\n",
-       "4    B  1\n",
+       "3    B  0\n",
+       "4    B  0\n",
        "..  .. ..\n",
        "145  D  1\n",
-       "146  D  0\n",
+       "146  D  1\n",
        "147  D  1\n",
        "148  D  1\n",
        "149  D  1\n",
@@ -1399,7 +1399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 1.00 ≥ α = 0.05 → Não rejeitamos H0\n"
+      "p-valor = 1.00 > α = 0.05 → Não rejeitamos H0\n"
      ]
     }
    ],
@@ -1409,9 +1409,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -1650,7 +1650,7 @@
      "output_type": "stream",
      "text": [
       "df = 3\n",
-      "p-valor = 0.18 ≥ α = 0.05 → Não rejeitamos H0\n"
+      "p-valor = 0.18 > α = 0.05 → Não rejeitamos H0\n"
      ]
     }
    ],
@@ -1674,9 +1674,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -1775,7 +1775,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 0.19 ≥ α = 0.05 → Não rejeitamos H0\n"
+      "p-valor = 0.20 > α = 0.05 → Não rejeitamos H0\n"
      ]
     }
    ],
@@ -1786,9 +1786,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -1800,7 +1800,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.1894)"
+       "np.float64(0.1989)"
       ]
      },
      "execution_count": 47,
@@ -1997,7 +1997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC = [75.13, 79.16]\n"
+      "IC = [75.13, 79.12]\n"
      ]
     }
    ],
@@ -2082,7 +2082,7 @@
       "uo = 70\n",
       "SE = 1.04\n",
       "t_obs = 6.9\n",
-      "p-valor = 0.00 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.00 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -2112,9 +2112,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -2188,7 +2188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 0.00 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.00 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -2198,9 +2198,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")\n"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")\n"
    ]
   },
   {
@@ -2420,7 +2420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SE = 2.39\n"
+      "SE = 2.4\n"
      ]
     }
    ],
@@ -2440,7 +2440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC = [-11.5, -2.104]\n"
+      "IC = [-11.423, -2.079]\n"
      ]
     }
    ],
@@ -2524,7 +2524,7 @@
       "do = 0\n",
       "SE = 2.41\n",
       "t_obs = -2.82\n",
-      "p-valor = 0.01 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.01 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -2556,9 +2556,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -2643,7 +2643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-valor = 0.01 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.01 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -2653,9 +2653,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
@@ -2824,7 +2824,7 @@
       "do = 0\n",
       "SE = 0.07\n",
       "t_obs = 19.95\n",
-      "p-valor = 0.00 < α = 0.05 → Rejeitamos H0\n"
+      "p-valor = 0.00 ≤ α = 0.05 → Rejeitamos H0\n"
      ]
     }
    ],
@@ -2854,9 +2854,9 @@
     "\n",
     "# Decisão\n",
     "if p_value < alpha:\n",
-    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "    print(f\"p-valor = {p_value:.2f} ≤ α = {alpha} → Rejeitamos H0\")\n",
     "else:\n",
-    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+    "    print(f\"p-valor = {p_value:.2f} > α = {alpha} → Não rejeitamos H0\")"
    ]
   },
   {
